Added Output method

--- a/package.json
+++ b/package.json
@@ -21,5 +21,5 @@
   "bugs": {
     "url": "https://github.com/hazlema/SQLParse/issues"
   },
-  "homepage": "https://github.com/hazlema/SQLParse#readme"
+  "homepage": "https://github.com/hazlema/SQLParse#readme",
 }
